[package]
name = "basiclu-sys"
version = "0.1.1"
description = "Rust FFI bindings for BasicLU"
edition = "2021"
license = "MIT OR GPL-3.0-or-later"
repository = "https://github.com/rwl/basiclu-sys"

[build-dependencies]
bindgen = "0.58"
#cbindgen = "0.24.3"

[dependencies]

#[lib]
#name = "blurs"
#crate-type = ["cdylib", "staticlib"]